	PR c++/84551 - ICE with concepts and -g.

* parser.c (add_debug_begin_stmt): Do nothing in a concept.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@258009 138bc75d-0d04-0410-961f-82ee72b054a4